--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 	        <sonar.host.url>http://13.232.226.32:9000/</sonar.host.url>
-		<sonar.login>69254510248fe7275530b7310f103ea71c326563</sonar.login>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>sonarqube</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
