--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/devops-release/</url>
+	      <url>http://http://13.233.131.210:8081/repository/devops-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Nexus proxy Repo</name>
-	      <url>http://localhost:8081/repository/devops-proxy-repo/</url>
+	      <url>http://http://13.233.131.210:8081/repository/devops-proxy-repo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
