--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-	        <sonar.host.url>http://3.110.47.59:9000/</sonar.host.url>
+	        <sonar.host.url>http://13.233.100.105:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>sonarqube</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Releases Nexus Repository</name>
-	      <url>http://http://3.7.68.32:8081/repository/devops-release/</url>
+	      <url>http://13.235.87.62:8081//repository/devops-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Nexus proxy Repo</name>
-	      <url>http://http://3.7.68.32:8081/repository/devops-snapshot/</url>
+	      <url>http://13.235.87.62:8081//repository/devops-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
