--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.235.69.100:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>sonarqube</sonar.password>
+		<sonar.login>85b0f19b0f9c67b2bfbc90038083ed4ab0702bff</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
