--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	
 	<groupId>com.mt</groupId>
 	<artifactId>Devops-Technology</artifactId>
+	<packaging>war</packaging>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>maven-web-application</name>
 
