--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.235.69.100:9000/</sonar.host.url>
-		<sonar.login>85b0f19b0f9c67b2bfbc90038083ed4ab0702bff</sonar.login>
+		<sonar.host.url>http://18.116.81.175:9000/</sonar.host.url>
+		<sonar.login>6067f64f87b23dca5ae9c3e63e683d1000b3c591</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Releases Nexus Repository</name>
-	      <url>http://13.234.30.255:8081/repository/devops-snapshot/</url>
+	      <<url>http://3.145.81.163:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Snapshot Nexus Repository </name>
-	      <url>http://13.234.30.255:8081/repository/devops-snapshot/</url>
+	      <url>http://3.145.81.163:8081/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
