--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Releases Nexus Repository</name>
-	      <<url>http://18.119.121.95:8081/repository/maven-releases/</url>
+	      <url>http://18.119.121.95:8081/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
